# ep-wagtail-demo

./: .gitignore  .gitpod.yml
cms/: Dockerfile  db.sqlite3  manage.py  pyproject.toml
cms/api/: router.py
cms/ep/: urls.py  wsgi.py
cms/ep/settings/: base.py  dev.py
cms/ep/templates/: base.html
cms/home/: blocks.py  models.py
cms/home/migrations/: 0003_homepage_body.py  0004_alter_homepage_body.py
frontend/: package-lock.json  package.json
frontend/data/: coc.md
frontend/pages/: _app.tsx  index.tsx
frontend/stories/: Header.stories.tsx  Header.tsx
